# asyncvarlink

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
asyncvarlink/: __init__.py  clientprotocol.py  conversion.py  error.py  interface.py  message.py  protocol.py  serverprotocol.py  serviceerrors.py  serviceinterface.py  types.py  util.py
doc/: conf.py  index.rst
docs/: structure.rst  usage.rst
tests/: helpers.py  test_basic.py  test_certification.py  test_clientprotocol.py  test_conversion.py  test_end2end.py  test_interface.py  test_protocol.py  test_serverprotocol.py  test_serviceinterface.py  test_util.py
