[project]
name = "asyncvarlink"
version = "0.0"
description = "asyncio-compatible, type-driven varlink implementation supporting file descriptor passing"
authors = [{name = "Helmut Grohne", email = "helmut@subdivi.de"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX",
  "Typing :: Typed",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["hypothesis"]

[tool.black]
line-length = 79

[tool.mypy]
strict = true

[tool.pylint]
max-line-length = 79
